Ensure a regular width for item card icons
Before, listings of heterogenous types could produce icons of different width,
which messed up the alignment.

--- a/woost/admin/ui/resources/styles/woost-admin-ui-itemcard.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-itemcard.scss
@@ -151,6 +151,7 @@ $icon-height: $card-height - $icon-padding * 2;
 #icon {
     flex: 0 0;
     --height: #{$icon-height};
+    --width: #{$icon-height};
     color: #999;
 
     :host(:hover):host-context(.cocktail-ui-selected) & {
